# AI-Agent8004

./: .gitignore  README.md  index.js  package-lock.json  package.json  pyproject.toml
.devcontainer/: devcontainer.json
agent/config/: settings.py
agent/core/: proposals.py  types.py
agent/governance/: approvals.py  policy.py
agent/ops/: audit.py  killswitch.py
agent/runtime/: orchestrator.py
agent/storage/: state_store.py
agent/strategies/: base.py  basis.py  funding_carry.py  smoke_test.py  trend.py
agent/trading/: execution.py  policy.py  risk.py  risk_state.py
ai_agent8004.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
logs/: audit.jsonl  state.json
scripts/: run_agent.py  run_orchestrator.py
