[project]
name = "ai-agent8004"
version = "0.1.0"
description = "Security-first autonomous crypto agent"
requires-python = ">=3.12"
dependencies = [
  "pydantic>=2.7",
  "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.6",
  "mypy>=1.10",
  "pytest>=8.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"
lint.select = ["E","F","I","B","UP","S"]
lint.ignore = ["S101"]

[tool.mypy]
python_version = "3.12"
strict = true
